--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "postinstall": "husky"
   },
   "dependencies": {
+    "@a01sa01to/ui": "^2.1.2",
     "isbot": "^5.1.30",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -25,10 +26,12 @@
     "@types/node": "^24.3.0",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
+    "@vitejs/plugin-react": "^5.0.2",
     "eslint": "^9.34.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.5",
     "prettier": "^3.6.2",
+    "sass-embedded": "^1.92.1",
     "typescript": "^5.9.2",
     "vite": "^7.1.3",
     "vite-tsconfig-paths": "^5.1.4",
