--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
       "eslint --fix",
       "prettier --write"
     ],
-    "*.{json,css,scss,html,yaml,md,txt}": [
-      "prettier --write"
+    "*.*": [
+      "prettier --write --ignore-unknown"
     ]
   }
 }
